Styling fixes for card, spacing and search box width

--- a/src/index.css
+++ b/src/index.css
@@ -35,14 +35,14 @@ main {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 0.5rem auto 2rem;
+  margin: 1rem auto 2.5rem;
 }
 
 .container-grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-column-gap: 2rem;
-  grid-row-gap: 3.5rem;
+  grid-column-gap: 3.5rem;
+  grid-row-gap: 3.65rem;
 }
 
 /* Search */
@@ -59,6 +59,7 @@ main {
 }
 
 .search-input {
+  width: 28rem;
   padding: 1rem;
   padding-left: 3rem;
   border: unset;
@@ -80,6 +81,7 @@ main {
 }
 
 .card-img {
+  height: 10rem;
   border-top-left-radius: 0.25rem;
   border-top-right-radius: 0.25rem;
 }
@@ -117,6 +119,7 @@ main {
 .dropdown-btn {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   background-color: #fff;
   padding: 1rem;
   border-radius: 0.25rem;
